--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="footer.css">
-
+    <link rel="stylesheet" href="footer_port.css">
 </head>
 
 <body>
-    <!--BARRA DE NAVEGACIÓN-->
+    <!-- BARRA DE NAVEGACIÓN -->
     <nav class="navbar sticky-top navbar-expand-sm navbar-dark navegador">
         <a href="#" class="navbar-brand nombre-marca">Daniel Campos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navegadorprincipal" aria-controls="navegadorprincipal" aria-expanded="false" aria-label="Menú">
@@ -24,6 +23,7 @@
         <div class="collapse navbar-collapse flex-row-reverse" id="navegadorprincipal">
             <div class="navbar-nav">
                 <a href="#seccionPortafolio" class="nav-item nav-link">Portafolio</a>
+                <a href="#seccionPoesias" class="nav-item nav-link">Mis Poesías</a>
                 <a href="#seccionContacto" class="nav-item nav-link">Contacto</a>
                 <a href="#seccionSobreMi" class="nav-item nav-link">Sobre mí</a>
             </div>
@@ -31,28 +31,28 @@
     </nav>
 
     <!-- SECCIÓN BIO -->  
-<div class="jumbotron jumbotron-fluid text-center cabecera">  
-    <div style="max-width: 150px; margin: auto;">
-        <img src="1736544993542.jpg" alt="Foto de Daniel Campos" class="img-thumbnail rounded-circle">
-    </div>
-    <div class="container rounded bio-container">
-        <h1 class="display-4 nombre-marca">Daniel Campos</h1>  
-        <div class="social-buttons">
-            <a href="https://www.instagram.com/_danielcc11" class="btn btn-dark" target="_blank">
-                <i class="fab fa-instagram"></i> Instagram
-            </a>
-            <a href="https://www.facebook.com/ricardoantoniomx" class="btn btn-dark" target="_blank">
-                <i class="fab fa-facebook"></i> Facebook
-            </a>
-            <a href="https://github.com/danielcc11" class="btn btn-dark" target="_blank">
-                <i class="fab fa-github"></i> GitHub
-            </a>
+    <div class="jumbotron jumbotron-fluid text-center cabecera">  
+        <div style="max-width: 150px; margin: auto;">
+            <img src="1736544993542.jpg" alt="Foto de Daniel Campos" class="img-thumbnail rounded-circle">
         </div>
-        <p class="lead">Programador junior de Python, escritor y estudiante universitario.</p>  
-    </div>  
-</div>
+        <div class="container rounded bio-container">
+            <h1 class="display-4 nombre-marca">Daniel Campos</h1>  
+            <div class="social-buttons">
+                <a href="https://www.instagram.com/_danielcc11" class="btn btn-dark" target="_blank">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://www.facebook.com/ricardoantoniomx" class="btn btn-dark" target="_blank">
+                    <i class="fab fa-facebook"></i> Facebook
+                </a>
+                <a href="https://github.com/danielcc11" class="btn btn-dark" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+            </div>
+            <p class="lead">Programador junior de Python, escritor y estudiante universitario.</p>  
+        </div>  
+    </div>
 
- <!-- SECCIÓN SOBRE MÍ -->
+    <!-- SECCIÓN SOBRE MÍ -->
     <div class="container-fluid" id="seccionSobreMi">
         <h2 class="text-center">Sobre mí</h2>
         <div class="row">
@@ -67,83 +67,112 @@
         </div>
     </div>
 
-
-  <!-- SECCIÓN PORTAFOLIO -->  
-<div class="container-fluid" id="seccionPortafolio">  
-    <h2 class="text-center">Portafolio</h2>  
-    <div class="row">  
-        <!-- Proyecto 1 -->  
-        <div class="col-md-6">  
-            <div class="portfolio-item" style="background-image: url('descarga.png');">  
-                <a href="https://github.com/danielcc11/spotipy" class="btn btn-primary portfolio-button" target="_blank">  
-                    Spotipy  
-                </a>  
+    <!-- SECCIÓN PORTAFOLIO -->  
+    <div class="container-fluid" id="seccionPortafolio">  
+        <h2 class="text-center">Portafolio</h2>  
+        <div class="row">  
+            <!-- Proyecto 1 -->  
+            <div class="col-md-6">  
+                <div class="portfolio-item" style="background-image: url('descarga.png');">  
+                    <a href="https://github.com/danielcc11/spotipy" class="btn btn-primary portfolio-button" target="_blank">  
+                        Spotipy  
+                    </a>  
+                </div>  
             </div>  
-        </div>  
 
-        <!-- Proyecto 2 -->  
-        <div class="col-md-6">  
-            <div class="portfolio-item" style="background-image: url('descarga (2).jpeg');">  
-                <a href="https://github.com/danielcc11/saludos-py" class="btn btn-primary portfolio-button" target="_blank">  
-                    Saludos.py  
-                </a>  
-            </div>  
-        </div>  
-    </div>  
-</div>  
-
-
-<!-- Descripción del proyecto al pasar el ratón -->  
-<div class="tooltip" style="display: none;" id="project-tooltip"></div>
-
-<!-- SECCIÓN CONTACTO -->  
-<div class="container-fluid" id="seccionContacto">  
-    <h2 class="text-center">Contacto</h2>  
-    <div class="row">  
-        <div class="col-md-12 text-center">  
-            <p class="lead">Abajo puedes encontrar cómo contactarme, déjame un mensaje y trataré de responder lo más pronto posible</p>  
-            <div class="btn-container">  
-                <a href="https://www.instagram.com/_danielcc11" class="btn translucent-btn" target="_blank">  
-                    <i class="fab fa-instagram"></i>  
-                </a>  
-                <a href="https://www.facebook.com/daniel.campos.18041092?mibextid=ZbWKwL" class="btn translucent-btn" target="_blank">  
-                    <i class="fab fa-facebook"></i>  
-                </a>  
-                <a href="https://github.com/danielcc11" class="btn translucent-btn" target="_blank">  
-                    <i class="fab fa-github"></i>  
-                </a>  
+            <!-- Proyecto 2 -->  
+            <div class="col-md-6">  
+                <div class="portfolio-item" style="background-image: url('descarga (2).jpeg');">  
+                    <a href="https://github.com/danielcc11/saludos-py" class="btn btn-primary portfolio-button" target="_blank">  
+                        Saludos.py  
+                    </a>  
+                </div>  
             </div>  
         </div>  
     </div>  
-</div>
 
-<footer class="footer text-center">  
-    <p class="tm-copyright-text">Copyright © 2025 Daniel Campos - Todos los derechos reservados.</p> 
-
-    <div class="btn-container">  
-        <a href="https://www.instagram.com/_danielcc11" class="btn translucent-btn" target="_blank">  
-            <i class="fab fa-instagram"></i>  
-        </a>  
-        <a href="https://www.facebook.com/daniel.campos.18041092?mibextid=ZbWKwL" class="btn translucent-btn" target="_blank">  
-            <i class="fab fa-facebook"></i>  
-        </a>  
-        <a href="https://github.com/danielcc11" class="btn translucent-btn" target="_blank">  
-            <i class="fab fa-github"></i>  
-        </a>  
+    <!-- SECCIÓN MIS POESÍAS -->  
+    <div class="container-fluid" id="seccionPoesias">  
+        <h2 class="text-center">Mis Poesías</h2>  
+        <div id="poesiaCarousel" class="carousel slide" data-ride="carousel">  
+            <div class="carousel-inner">  
+                <div class="carousel-item active">  
+                    <img src="images/poema1.jpg" class="d-block w-100" alt="Poesía 1">  
+                    <div class="carousel-caption d-none d-md-block">  
+                        <h5>¿A quién quiero mentirle?</h5>  
+                        <p>Poema de Diciembre 2024.</p>  
+                    </div>  
+                </div>  
+                <div class="carousel-item">  
+                    <img src="images/poema2.jpg" class="d-block w-100" alt="Poesía 2">  
+                    <div class="carousel-caption d-none d-md-block">  
+                        <h5>Serenidad</h5>  
+                        <p>Poema de Octubre 2024.</p>  
+                    </div>  
+                </div>  
+                <div class="carousel-item">  
+                    <img src="images/poema3.jpg" class="d-block w-100" alt="Poesía 3">  
+                    <div class="carousel-caption d-none d-md-block">  
+                        <h5>Cielo</h5>  
+                        <p>Poema de Febrero 2024.</p>  
+                    </div>  
+                </div>  
+            </div>  
+            <a class="carousel-control-prev" href="#poesiaCarousel" role="button" data-slide="prev">  
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>  
+                <span class="sr-only">Anterior</span>  
+            </a>  
+            <a class="carousel-control-next" href="#poesiaCarousel" role="button" data-slide="next">  
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>  
+                <span class="sr-only">Siguiente</span>  
+            </a>  
+        </div>  
     </div>  
-</footer>
 
-<!-- Scripts de Bootstrap y Font Awesome -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- Descripción del proyecto al pasar el ratón -->  
+    <div class="tooltip" style="display: none;" id="project-tooltip"></div>
 
+    <!-- SECCIÓN CONTACTO -->  
+    <div class="container-fluid" id="seccionContacto">  
+        <h2 class="text-center">Contacto</h2>  
+        <div class="row">  
+            <div class="col-md-12 text-center">  
+                <p class="lead">Abajo puedes encontrar cómo contactarme, déjame un mensaje y trataré de responder lo más pronto posible</p>  
+                <div class="btn-container">  
+                    <a href="https://www.instagram.com/_danielcc11" class="btn translucent-btn" target="_blank">  
+                        <i class="fab fa-instagram"></i>  
+                    </a>  
+                    <a href="https://www.facebook.com/daniel.campos.18041092?mibextid=ZbWKwL" class="btn translucent-btn" target="_blank">  
+                        <i class="fab fa-facebook"></i>  
+                    </a>  
+                    <a href="https://github.com/danielcc11" class="btn translucent-btn" target="_blank">  
+                        <i class="fab fa-github"></i>  
+                    </a>  
+                </div>  
+            </div>  
+        </div>  
+    </div>
 
+    <footer class="footer text-center">  
+        <p class="tm-copyright-text">Copyright © 2025 Daniel Campos - Todos los derechos reservados.</p> 
+
+        <div class="btn-container">  
+            <a href="https://www.instagram.com/_danielcc11" class="btn translucent-btn" target="_blank">  
+                <i class="fab fa-instagram"></i>  
+            </a>  
+            <a href="https://www.facebook.com/daniel.campos.18041092?mibextid=ZbWKwL" class="btn translucent-btn" target="_blank">  
+                <i class="fab fa-facebook"></i>  
+            </a>  
+            <a href="https://github.com/danielcc11" class="btn translucent-btn" target="_blank">  
+                <i class="fab fa-github"></i>  
+            </a>  
+        </div>  
+    </footer>
+
+    <!-- Scripts de Bootstrap y Font Awesome -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script>  
-    const buttons = document
 </body>
 
 </html>
